--- a/package.json
+++ b/package.json
@@ -18,6 +18,67 @@
   "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
+    "configuration": {
+      "title": "Scrcpy",
+      "properties": {
+        "scrcpy.path": {
+          "type": "string",
+          "default": "",
+          "description": "Path to scrcpy installation directory (leave empty to use PATH)"
+        },
+        "scrcpy.screenOff": {
+          "type": "boolean",
+          "default": false,
+          "description": "Turn device screen off while mirroring (saves battery)"
+        },
+        "scrcpy.stayAwake": {
+          "type": "boolean",
+          "default": true,
+          "description": "Keep device awake during mirroring"
+        },
+        "scrcpy.maxSize": {
+          "type": "number",
+          "default": 1920,
+          "enum": [720, 1080, 1440, 1920],
+          "enumDescriptions": [
+            "720 max - Lower resolution, best performance",
+            "1080 max - HD resolution",
+            "1440 max - QHD resolution",
+            "1920 max - Full resolution (default)"
+          ],
+          "description": "Maximum screen dimension (width or height) in pixels"
+        },
+        "scrcpy.bitRate": {
+          "type": "number",
+          "default": 8,
+          "enum": [2, 4, 8, 16, 32],
+          "enumDescriptions": [
+            "2 Mbps - Low quality, minimal bandwidth",
+            "4 Mbps - Medium quality",
+            "8 Mbps - High quality (recommended)",
+            "16 Mbps - Very high quality",
+            "32 Mbps - Maximum quality"
+          ],
+          "description": "Video bitrate in Mbps"
+        },
+        "scrcpy.maxFps": {
+          "type": "number",
+          "default": 60,
+          "enum": [15, 30, 60],
+          "enumDescriptions": [
+            "15 FPS - Low frame rate, saves bandwidth",
+            "30 FPS - Standard frame rate",
+            "60 FPS - Smooth frame rate (recommended)"
+          ],
+          "description": "Maximum frames per second"
+        },
+        "scrcpy.showTouches": {
+          "type": "boolean",
+          "default": false,
+          "description": "Show visual touch feedback on device screen"
+        }
+      }
+    },
     "commands": [
       {
         "command": "scrcpy.start",
@@ -26,8 +87,22 @@
       {
         "command": "scrcpy.stop",
         "title": "Scrcpy: Stop Device Mirroring"
+      },
+      {
+        "command": "scrcpy.openSettings",
+        "title": "Scrcpy: Open Settings",
+        "icon": "$(gear)"
       }
     ],
+    "menus": {
+      "view/title": [
+        {
+          "command": "scrcpy.openSettings",
+          "when": "view == scrcpy.deviceView",
+          "group": "navigation"
+        }
+      ]
+    },
     "viewsContainers": {
       "activitybar": [
         {
