Add showStats setting and responsive toolbar layout
- Add scrcpy.showStats setting to toggle FPS/frame counter (disabled by default)
- Skip performance.now() calls when stats are disabled
- Make toolbar responsive: hide volume/power buttons below 220px width
- Add min-width to container for better narrow panel handling

--- a/package.json
+++ b/package.json
@@ -76,6 +76,11 @@
           "type": "boolean",
           "default": false,
           "description": "Show visual touch feedback on device screen"
+        },
+        "scrcpy.showStats": {
+          "type": "boolean",
+          "default": false,
+          "description": "Show FPS and frame count statistics"
         }
       }
     },
