Add bidirectional clipboard sync between host and device
Implement automatic clipboard synchronization that works in both directions:
- Host to device: polls VS Code clipboard every 1s and sends SET_CLIPBOARD
- Device to host: listens for CLIPBOARD messages on control socket

Features:
- New scrcpy.clipboardSync setting (enabled by default)
- Sync loop prevention to avoid infinite bouncing
- Error recovery with automatic retry on failures
- Truncation warning for large clipboard content (>256KB)
- State cleanup on disconnect/reconnect

--- a/package.json
+++ b/package.json
@@ -81,6 +81,11 @@
           "type": "boolean",
           "default": false,
           "description": "Show FPS and frame count statistics"
+        },
+        "scrcpy.clipboardSync": {
+          "type": "boolean",
+          "default": true,
+          "description": "Automatically sync clipboard between host and device"
         }
       }
     },
