Refactor: Modularize codebase, fix black canvas on reload, and update protocol handling
- Refactor Webview: Extract HTML template to  and key mappings to  for better separation of concerns.
- Refactor Protocol: Centralize scrcpy protocol constants in  and update connection logic to use them, eliminating magic numbers.
- Fix Video Parsing: Replace custom H.264 bitstream parser with  library for robust SPS decoding and video dimension extraction.
- Fix Black Canvas: Implement keyframe propagation mechanism () to cache and replay the last keyframe on device resume/reload, ensuring immediate video initialization for background tabs.
- Deps: Add  and  dependencies.
- Update .gitignore: Exclude  folders.

--- a/package.json
+++ b/package.json
@@ -293,6 +293,8 @@
     "lint": "eslint src --ext ts"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
+    "h264-sps-parser": "^0.2.1",
     "opus-decoder": "^0.7.11"
   },
   "devDependencies": {
