feat: add file upload button to view title bar
- Add cloud-upload button to upload files and folders to device
- Support recursive directory upload to /sdcard/Download/
- Show progress notification with file count
- Confirm large uploads (100+ files) before proceeding
- Update documentation with new feature and testing instructions

--- a/package.json
+++ b/package.json
@@ -250,6 +250,11 @@
         "icon": "$(package)"
       },
       {
+        "command": "scrcpy.uploadFiles",
+        "title": "%command.uploadFiles%",
+        "icon": "$(cloud-upload)"
+      },
+      {
         "command": "scrcpy.openSettings",
         "title": "%command.openSettings%",
         "icon": "$(gear)"
@@ -258,12 +263,17 @@
     "menus": {
       "view/title": [
         {
-          "command": "scrcpy.connectWifi",
+          "command": "scrcpy.uploadFiles",
           "when": "view == scrcpy.deviceView",
           "group": "navigation"
         },
         {
           "command": "scrcpy.installApk",
+          "when": "view == scrcpy.deviceView",
+          "group": "navigation"
+        },
+        {
+          "command": "scrcpy.connectWifi",
           "when": "view == scrcpy.deviceView",
           "group": "navigation"
         },
