--- a/package.json
+++ b/package.json
@@ -159,28 +159,60 @@
         "title": "%config.title.device%",
         "order": 3,
         "properties": {
+          "scrcpy.displayMode": {
+            "type": "string",
+            "default": "mirror",
+            "order": 0,
+            "enum": [
+              "mirror",
+              "virtual"
+            ],
+            "enumDescriptions": [
+              "%config.scrcpy.displayMode.mirror%",
+              "%config.scrcpy.displayMode.virtual%"
+            ],
+            "markdownDescription": "%config.scrcpy.displayMode%"
+          },
+          "scrcpy.virtualDisplayWidth": {
+            "type": "number",
+            "default": 1080,
+            "order": 1,
+            "markdownDescription": "%config.scrcpy.virtualDisplayWidth%"
+          },
+          "scrcpy.virtualDisplayHeight": {
+            "type": "number",
+            "default": 1920,
+            "order": 2,
+            "markdownDescription": "%config.scrcpy.virtualDisplayHeight%"
+          },
+          "scrcpy.virtualDisplayDpi": {
+            "type": "number",
+            "default": 0,
+            "order": 3,
+            "markdownDescription": "%config.scrcpy.virtualDisplayDpi%"
+          },
           "scrcpy.screenOff": {
             "type": "boolean",
             "default": false,
-            "order": 0,
+            "order": 4,
             "markdownDescription": "%config.scrcpy.screenOff%"
           },
           "scrcpy.stayAwake": {
             "type": "boolean",
             "default": true,
-            "order": 1,
+            "order": 5,
             "markdownDescription": "%config.scrcpy.stayAwake%"
           },
           "scrcpy.showTouches": {
             "type": "boolean",
             "default": false,
-            "order": 2,
+            "order": 6,
             "markdownDescription": "%config.scrcpy.showTouches%"
           },
           "scrcpy.lockVideoOrientation": {
             "type": "boolean",
             "default": false,
-            "order": 3,
+            "order": 7,
             "markdownDescription": "%config.scrcpy.lockVideoOrientation%"
           }
         }
