fix: exclude test directory from TypeScript compilation
- Add 'test' and 'vitest.config.ts' to tsconfig.json exclude list
- Prevents TypeScript errors about test files not being under rootDir
- Compilation now succeeds without errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "declaration": true,
     "declarationMap": true
   },
-  "exclude": ["node_modules", ".vscode-test", "src/webview"]
+  "exclude": ["node_modules", ".vscode-test", "src/webview", "test", "vitest.config.ts"]
 }
