feat: add keyboard shortcuts for tab switching
Add Alt+1 through Alt+9 keyboard shortcuts to quickly switch between
device tabs. Alt+0 switches to the 10th tab or last tab.

Implementation:
- Added keyboard event listener in webview to capture Alt+[0-9]
- Added VS Code commands (scrcpy.switchToTab1-9) for customization
- Registered keybindings in package.json with context filtering
- Created comprehensive documentation in docs/feature-keyboard-shortcuts.md

The shortcuts work in two ways:
1. Direct webview keyboard events (primary method)
2. VS Code commands (for keybinding customization)

Shortcuts only activate when the scrcpy view is focused to avoid
conflicts with other extensions.

--- a/package.json
+++ b/package.json
@@ -393,6 +393,89 @@
         "command": "scrcpy.listCameras",
         "title": "%command.listCameras%",
         "icon": "$(device-camera-video)"
+      },
+      {
+        "command": "scrcpy.switchToTab1",
+        "title": "%command.switchToTab1%"
+      },
+      {
+        "command": "scrcpy.switchToTab2",
+        "title": "%command.switchToTab2%"
+      },
+      {
+        "command": "scrcpy.switchToTab3",
+        "title": "%command.switchToTab3%"
+      },
+      {
+        "command": "scrcpy.switchToTab4",
+        "title": "%command.switchToTab4%"
+      },
+      {
+        "command": "scrcpy.switchToTab5",
+        "title": "%command.switchToTab5%"
+      },
+      {
+        "command": "scrcpy.switchToTab6",
+        "title": "%command.switchToTab6%"
+      },
+      {
+        "command": "scrcpy.switchToTab7",
+        "title": "%command.switchToTab7%"
+      },
+      {
+        "command": "scrcpy.switchToTab8",
+        "title": "%command.switchToTab8%"
+      },
+      {
+        "command": "scrcpy.switchToTab9",
+        "title": "%command.switchToTab9%"
+      }
+    ],
+    "keybindings": [
+      {
+        "command": "scrcpy.switchToTab1",
+        "key": "alt+1",
+        "when": "activeViewlet == 'scrcpy' || activeView == 'scrcpy.deviceView'"
+      },
+      {
+        "command": "scrcpy.switchToTab2",
+        "key": "alt+2",
+        "when": "activeViewlet == 'scrcpy' || activeView == 'scrcpy.deviceView'"
+      },
+      {
+        "command": "scrcpy.switchToTab3",
+        "key": "alt+3",
+        "when": "activeViewlet == 'scrcpy' || activeView == 'scrcpy.deviceView'"
+      },
+      {
+        "command": "scrcpy.switchToTab4",
+        "key": "alt+4",
+        "when": "activeViewlet == 'scrcpy' || activeView == 'scrcpy.deviceView'"
+      },
+      {
+        "command": "scrcpy.switchToTab5",
+        "key": "alt+5",
+        "when": "activeViewlet == 'scrcpy' || activeView == 'scrcpy.deviceView'"
+      },
+      {
+        "command": "scrcpy.switchToTab6",
+        "key": "alt+6",
+        "when": "activeViewlet == 'scrcpy' || activeView == 'scrcpy.deviceView'"
+      },
+      {
+        "command": "scrcpy.switchToTab7",
+        "key": "alt+7",
+        "when": "activeViewlet == 'scrcpy' || activeView == 'scrcpy.deviceView'"
+      },
+      {
+        "command": "scrcpy.switchToTab8",
+        "key": "alt+8",
+        "when": "activeViewlet == 'scrcpy' || activeView == 'scrcpy.deviceView'"
+      },
+      {
+        "command": "scrcpy.switchToTab9",
+        "key": "alt+9",
+        "when": "activeViewlet == 'scrcpy' || activeView == 'scrcpy.deviceView'"
       }
     ],
     "menus": {
