feat: add microphone capture audio source option
Add configuration option to choose between device playback audio
and device microphone as the audio source for streaming.

Changes:
- Add scrcpy.audioSource setting (enum: "output" | "mic")
- Update ScrcpyConfig interface to include audioSource property
- Modify server arguments to pass audio_source=mic when selected
- Add audioSource to configuration change listener for auto-reconnect
- Add localization strings for new setting
- Add comprehensive documentation in docs/feature-mic-capture.md

The feature enables users to:
- Capture device microphone audio instead of playback audio
- Test voice recording apps and monitor microphone input
- Test video call and VoIP applications
- Verify audio input quality and behavior

Default behavior remains unchanged (playback audio).
Only takes effect when scrcpy.audio is enabled.

--- a/package.json
+++ b/package.json
@@ -232,6 +232,20 @@
             "default": true,
             "order": 0,
             "markdownDescription": "%config.scrcpy.audio%"
+          },
+          "scrcpy.audioSource": {
+            "type": "string",
+            "default": "output",
+            "order": 1,
+            "enum": [
+              "output",
+              "mic"
+            ],
+            "enumDescriptions": [
+              "%config.scrcpy.audioSource.output%",
+              "%config.scrcpy.audioSource.mic%"
+            ],
+            "markdownDescription": "%config.scrcpy.audioSource%"
           }
         }
       },
