--- a/package.json
+++ b/package.json
@@ -3,18 +3,34 @@
   "displayName": "Scrcpy for VS Code",
   "description": "%description%",
   "version": "0.1.0",
-  "publisher": "izan",
+  "publisher": "izantech",
   "license": "Apache-2.0",
+  "icon": "media/icon.png",
   "repository": {
     "type": "git",
-    "url": "https://github.com/izan/scrcpy-vscode"
+    "url": "https://github.com/izantech/scrcpy-vscode"
   },
+  "bugs": {
+    "url": "https://github.com/izantech/scrcpy-vscode/issues"
+  },
+  "homepage": "https://github.com/izantech/scrcpy-vscode#readme",
+  "keywords": [
+    "android",
+    "scrcpy",
+    "device",
+    "mirror",
+    "screen",
+    "adb",
+    "mobile",
+    "debug"
+  ],
   "engines": {
     "vscode": "^1.85.0"
   },
   "l10n": "./l10n",
   "categories": [
-    "Other"
+    "Other",
+    "Debuggers"
   ],
   "activationEvents": [],
   "main": "./dist/extension.js",
