--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,4 +70,5 @@ jobs:
         run: npx @vscode/vsce publish -p ${{ secrets.VSCE_PAT }}
 
       - name: Publish to Open VSX
+        continue-on-error: true # TODO: Remove after Eclipse updates GitHub username (Jan 2026)
         run: npx ovsx publish -p ${{ secrets.OVSX_PAT }}
