--- a/package.json
+++ b/package.json
@@ -46,28 +46,34 @@
             "order": 0,
             "markdownDescription": "%config.scrcpy.path%"
           },
-          "scrcpy.apkInstallDefaultPath": {
+          "scrcpy.adbPath": {
             "type": "string",
             "default": "",
             "order": 1,
+            "markdownDescription": "%config.scrcpy.adbPath%"
+          },
+          "scrcpy.apkInstallDefaultPath": {
+            "type": "string",
+            "default": "",
+            "order": 2,
             "markdownDescription": "%config.scrcpy.apkInstallDefaultPath%"
           },
           "scrcpy.clipboardSync": {
             "type": "boolean",
             "default": true,
-            "order": 2,
+            "order": 3,
             "markdownDescription": "%config.scrcpy.clipboardSync%"
           },
           "scrcpy.showStats": {
             "type": "boolean",
             "default": false,
-            "order": 3,
+            "order": 4,
             "markdownDescription": "%config.scrcpy.showStats%"
           },
           "scrcpy.showExtendedStats": {
             "type": "boolean",
             "default": false,
-            "order": 4,
+            "order": 5,
             "markdownDescription": "%config.scrcpy.showExtendedStats%"
           }
         }
