--- a/package.json
+++ b/package.json
@@ -516,6 +516,46 @@
       {
         "command": "scrcpy.switchToTab9",
         "title": "%command.switchToTab9%"
+      },
+      {
+        "command": "scrcpy.browseScrcpyPath",
+        "title": "%command.browseScrcpyPath%"
+      },
+      {
+        "command": "scrcpy.browseAdbPath",
+        "title": "%command.browseAdbPath%"
+      },
+      {
+        "command": "scrcpy.browseScreenshotPath",
+        "title": "%command.browseScreenshotPath%"
+      },
+      {
+        "command": "scrcpy.browseRecordingPath",
+        "title": "%command.browseRecordingPath%"
+      },
+      {
+        "command": "scrcpy.browseApkInstallPath",
+        "title": "%command.browseApkInstallPath%"
+      },
+      {
+        "command": "scrcpy.resetScrcpyPath",
+        "title": "%command.resetScrcpyPath%"
+      },
+      {
+        "command": "scrcpy.resetAdbPath",
+        "title": "%command.resetAdbPath%"
+      },
+      {
+        "command": "scrcpy.resetScreenshotPath",
+        "title": "%command.resetScreenshotPath%"
+      },
+      {
+        "command": "scrcpy.resetRecordingPath",
+        "title": "%command.resetRecordingPath%"
+      },
+      {
+        "command": "scrcpy.resetApkInstallPath",
+        "title": "%command.resetApkInstallPath%"
       }
     ],
     "keybindings": [
