feat: improve settings UX with directory pickers and tool warnings (#4)
* feat: show warning alert in empty state when tools are missing

- Add tool availability check at startup for ADB and scrcpy
- Display warning alert with install/settings buttons when tools missing
- Add new scrcpy.adbPath setting for custom ADB path
- Use pill-shaped buttons for modern appearance
- Remove VS Code notification popup in favor of inline warning alert
- Structured warning with title/subtitle layout

* feat: add directory picker links and emojis to settings

- Add "Choose directory" and "Reset" links to all path settings
- Register browse/reset commands for scrcpy, ADB, screenshot, recording, and APK paths
- Add descriptive emojis to all commands for better visual identification
- Remove "Scrcpy:" prefix from command titles for cleaner menu display
- Add tooltips to directory picker links
- Update documentation with new settings features

* fix: tool status not updating after path reset

- Always send toolStatus message to webview, not just when tools are missing
- This ensures the UI updates correctly when resetting from invalid to valid paths
- Add status bar feedback when updating/resetting path settings

* docs: update changelog with bug fixes

--- a/package.json
+++ b/package.json
@@ -46,28 +46,34 @@
             "order": 0,
             "markdownDescription": "%config.scrcpy.path%"
           },
-          "scrcpy.apkInstallDefaultPath": {
+          "scrcpy.adbPath": {
             "type": "string",
             "default": "",
             "order": 1,
+            "markdownDescription": "%config.scrcpy.adbPath%"
+          },
+          "scrcpy.apkInstallDefaultPath": {
+            "type": "string",
+            "default": "",
+            "order": 2,
             "markdownDescription": "%config.scrcpy.apkInstallDefaultPath%"
           },
           "scrcpy.clipboardSync": {
             "type": "boolean",
             "default": true,
-            "order": 2,
+            "order": 3,
             "markdownDescription": "%config.scrcpy.clipboardSync%"
           },
           "scrcpy.showStats": {
             "type": "boolean",
             "default": false,
-            "order": 3,
+            "order": 4,
             "markdownDescription": "%config.scrcpy.showStats%"
           },
           "scrcpy.showExtendedStats": {
             "type": "boolean",
             "default": false,
-            "order": 4,
+            "order": 5,
             "markdownDescription": "%config.scrcpy.showExtendedStats%"
           }
         }
@@ -510,6 +516,46 @@
       {
         "command": "scrcpy.switchToTab9",
         "title": "%command.switchToTab9%"
+      },
+      {
+        "command": "scrcpy.browseScrcpyPath",
+        "title": "%command.browseScrcpyPath%"
+      },
+      {
+        "command": "scrcpy.browseAdbPath",
+        "title": "%command.browseAdbPath%"
+      },
+      {
+        "command": "scrcpy.browseScreenshotPath",
+        "title": "%command.browseScreenshotPath%"
+      },
+      {
+        "command": "scrcpy.browseRecordingPath",
+        "title": "%command.browseRecordingPath%"
+      },
+      {
+        "command": "scrcpy.browseApkInstallPath",
+        "title": "%command.browseApkInstallPath%"
+      },
+      {
+        "command": "scrcpy.resetScrcpyPath",
+        "title": "%command.resetScrcpyPath%"
+      },
+      {
+        "command": "scrcpy.resetAdbPath",
+        "title": "%command.resetAdbPath%"
+      },
+      {
+        "command": "scrcpy.resetScreenshotPath",
+        "title": "%command.resetScreenshotPath%"
+      },
+      {
+        "command": "scrcpy.resetRecordingPath",
+        "title": "%command.resetRecordingPath%"
+      },
+      {
+        "command": "scrcpy.resetApkInstallPath",
+        "title": "%command.resetApkInstallPath%"
       }
     ],
     "keybindings": [
