feat(ios): add WebDriverAgent integration for touch/keyboard input (Phase 8)
Add touch, scroll, and keyboard input support for iOS devices via WebDriverAgent (WDA):

- Add WDAClient HTTP client for WebDriverAgent communication
- Add iproxy port forwarding for USB-based WDA connection
- Implement iOSConnection input methods (sendTouch, sendScroll, sendKey, injectText)
- Add dynamic capabilities update based on WDA availability
- Update DeviceService input routing to support iOS connections
- Add ScrcpyViewProvider iOS config for WDA settings
- Add capabilities property to ScrcpyConnection for consistency

Settings added:
- scrcpy.ios.webDriverAgentEnabled: Enable WDA for iOS input control
- scrcpy.ios.webDriverAgentPort: WDA port (default 8100)

Requires WebDriverAgent running on iOS device and iproxy installed (brew install libimobiledevice).

--- a/package.json
+++ b/package.json
@@ -431,6 +431,26 @@
             "markdownDescription": "%config.scrcpy.reconnectRetries%"
           }
         }
+      },
+      {
+        "title": "%config.title.iosControl%",
+        "order": 9,
+        "properties": {
+          "scrcpy.ios.webDriverAgentEnabled": {
+            "type": "boolean",
+            "default": false,
+            "order": 0,
+            "markdownDescription": "%config.scrcpy.ios.webDriverAgentEnabled%"
+          },
+          "scrcpy.ios.webDriverAgentPort": {
+            "type": "number",
+            "default": 8100,
+            "order": 1,
+            "minimum": 1,
+            "maximum": 65535,
+            "markdownDescription": "%config.scrcpy.ios.webDriverAgentPort%"
+          }
+        }
       }
     ],
     "commands": [
