feat(ios): add experimental iOS enabled toggle setting (Phase 10)
- Add scrcpy.ios.enabled setting with 'experimental' tag (default: false)
- iOS devices now only appear in device list when this setting is enabled
- Update iOSConnectionConfig interface with 'enabled' property
- Add setting to config listener for automatic reconnect on change
- Update CHANGELOG and AGENTS.md with new setting documentation

--- a/package.json
+++ b/package.json
@@ -436,16 +436,25 @@
         "title": "%config.title.iosControl%",
         "order": 9,
         "properties": {
-          "scrcpy.ios.webDriverAgentEnabled": {
+          "scrcpy.ios.enabled": {
             "type": "boolean",
             "default": false,
             "order": 0,
+            "tags": [
+              "experimental"
+            ],
+            "markdownDescription": "%config.scrcpy.ios.enabled%"
+          },
+          "scrcpy.ios.webDriverAgentEnabled": {
+            "type": "boolean",
+            "default": false,
+            "order": 1,
             "markdownDescription": "%config.scrcpy.ios.webDriverAgentEnabled%"
           },
           "scrcpy.ios.webDriverAgentPort": {
             "type": "number",
             "default": 8100,
-            "order": 1,
+            "order": 2,
             "minimum": 1,
             "maximum": 65535,
             "markdownDescription": "%config.scrcpy.ios.webDriverAgentPort%"
