feat(ios): seamless iOS integration with auto-detect and setup script (Phase 11)
- Auto-enable iOS on macOS (no setting required, just plug in device)
- Add setup script (scripts/setup-wda.sh) for guided WDA installation:
  - Checks prerequisites (Xcode, iproxy)
  - Clones WebDriverAgent repository
  - Guides user through Xcode signing
  - Builds and installs WDA on device
  - Includes 'start' command for subsequent launches
- Add VS Code commands:
  - 'Setup iOS Input Control (WebDriverAgent)' - one-time setup
  - 'Start iOS Input Control' - launch WDA after setup
- Update documentation with simplified iOS setup flow
- Update CHANGELOG and AGENTS.md with new features

--- a/package.json
+++ b/package.json
@@ -511,6 +511,16 @@
         "icon": "$(device-desktop)"
       },
       {
+        "command": "scrcpy.setupiOSInput",
+        "title": "%command.setupiOSInput%",
+        "icon": "$(tools)"
+      },
+      {
+        "command": "scrcpy.startiOSInput",
+        "title": "%command.startiOSInput%",
+        "icon": "$(play)"
+      },
+      {
         "command": "scrcpy.switchToTab1",
         "title": "%command.switchToTab1%"
       },
