feat(ios): use ideviceinstaller for app listing and improve menu visibility
- Change iOS app listing to use ideviceinstaller instead of WDA endpoint
  - WDA /wda/apps/list only returns running apps, not installed apps
  - ideviceinstaller lists all user-installed apps without WDA connection
- Add capability-based menu visibility using VS Code context variables
  - New scrcpy.supportsAppLaunch context for dynamic menu updates
  - Menu items update when WDA connects/disconnects
- Show helpful prompt when ideviceinstaller is not installed
  - Error message with "Copy Install Command" button
  - Copies "brew install ideviceinstaller" to clipboard
- Improve error message when launching apps without WDA
  - Clear instructions to use "Start iOS Input Control" menu option

--- a/package.json
+++ b/package.json
@@ -663,7 +663,7 @@
         },
         {
           "command": "scrcpy.launchApp",
-          "when": "view == scrcpy.deviceView && scrcpy.activeDevicePlatform == 'android'",
+          "when": "view == scrcpy.deviceView && scrcpy.supportsAppLaunch",
           "group": "2_device@1"
         },
         {
