--- a/package.json
+++ b/package.json
@@ -75,6 +75,12 @@
             "default": false,
             "order": 5,
             "markdownDescription": "%config.scrcpy.showExtendedStats%"
+          },
+          "scrcpy.showTouchRipples": {
+            "type": "boolean",
+            "default": false,
+            "order": 6,
+            "markdownDescription": "%config.scrcpy.showTouchRipples%"
           }
         }
       },
